--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugin-sass-injectonly",
+  "name": "plugin-sass",
   "version": "0.2.4",
   "description": "SystemJS SASS injector plugin that inlines the style requests, more flexible for angular 2 ",
   "registry": "jspm",
